SpringRestBootK8s/deployment/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: springrestbootk8s
  name: springrestbootk8s
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springrestbootk8s
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: springrestbootk8s
    spec:
      containers:
      - image: docker.io/krishnamanchikalapudi/springrestbootdocker:latest
        imagePullPolicy: Always
        name: springrestbootk8s
        ports:
        - containerPort: 8080
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
