SpringRestBootK8s/deployment/springrestbootk8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: springrestbootk8s-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springrestbootk8s-deployment
  namespace: springrestbootk8s-ns
spec:
  selector:
    matchLabels:
      app: springrestbootk8s-app
  replicas: 1 # tells deployment to run 3 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: springrestbootk8s-app
    spec:
      containers:
      - name: springrestbootk8s-app
        image: docker.io/krishnamanchikalapudi/springrestbootk8:latest
        ports:
        - containerPort: 8080
          name: server
        - containerPort: 8081
          name: management
---
apiVersion: v1
kind: Service
metadata:
  name: springrestbootk8s-service
  namespace: springrestbootk8s-ns
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  - port: 8081
    targetPort: 8081
    name: management
  selector:
    app: springrestbootk8s-app
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springrestbootk8s-ingress
  namespace: springrestbootk8s-ns
  annotations:
    kubernetes.io/ingress.allow-http: "true"
spec:
  backend:
    serviceName: springrestbootk8s-service
    servicePort: 8080
---
